--- a/src/app/style.sass
+++ b/src/app/style.sass
@@ -3,4 +3,4 @@
 @import ./itcss/4_base.sass
 @import ./itcss/5_objects.filer.sass
 @import ./itcss/5_objects.modal.sass
-@import ./itcss/_5_objects.spinner.sass
+@import ./itcss/5_objects.spinner.sass
