アラートの折り返し設定

--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -27,7 +27,8 @@
 
 		#{&}-alert
 			margin: 4px
-			white-space: pre-wrap
+			white-space: break-spaces
+			word-break: break-all
 
 		#{&}-prompt
 			margin: 4px
