--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -14,7 +14,8 @@
 			flex: none
 			margin-top: 24px
 			padding: 8px
-			width: 380px
+			width: 600px
+			max-width: calc(100% - 24px)
 			background: rgba(40, 40, 40, 1)
 			border: solid 1px rgba(40, 40, 40, 1)
 			@at-root
