--- a/src/app/itcss/_5_objects.filer.sass
+++ b/src/app/itcss/_5_objects.filer.sass
@@ -6,8 +6,19 @@
 	--bookmark: #{$lightGreen}
 	--error: #{$lightRed}
 
+	--stat-none: rgba(255, 255, 255, 0.1)
+	--stat-active: rgba(32, 144, 255, 1)
+	--stat-target: rgba(32, 144, 255, 0.5)
+
+	--cell-select-cursor: rgba(32, 144, 255, 0.2)
+	--cell-select: rgba(32, 144, 255, 0.1)
+	--cell-cursor: rgba(255, 255, 255, 0.1)
+
 	--dynamic-filer-font-size: 14px
 	--dynamic-filer-line-height: 18px
+
+	--scroll-width: 6px
+	--scroll-knob: rgba(255, 255, 255, 0.2)
 
 	--filer-info-height: calc(var(--dynamic-filer-line-height) * 2)
 	--filer-stat-height: 2px
@@ -26,8 +37,6 @@
 	color: var(--bookmark)
 .c-error
 	color: var(--error)
-
-$scroll_w: 6px
 
 .filer
 	@at-root
@@ -53,19 +62,19 @@ $scroll_w: 6px
 			height: var(--dynamic-filer-line-height)
 			line-height: var(--dynamic-filer-line-height)
 			font-size: var(--dynamic-filer-font-size)
-			padding: 0px 4px
+			margin: 0px 4px
 
 		#{&}-stat
 			position: absolute
 			top: calc(var(--dynamic-filer-line-height) * 2)
 			width: 100%
 			height: var(--filer-stat-height)
-			background: rgba(255, 255, 255, 0.1)
+			background: var(--stat-none)
 			@at-root
 				#{&}-active
-					background: rgba(32, 144, 255, 1)
+					background: var(--stat-active)
 				#{&}-target
-					background: rgba(32, 144, 255, 0.5)
+					background: var(--stat-target)
 
 		#{&}-data
 			position: absolute
@@ -83,17 +92,17 @@ $scroll_w: 6px
 			line-height: var(--dynamic-filer-line-height)
 			@at-root
 				#{&}-select#{&}-cursor
-					background: rgba(32, 144, 255, 0.2)
+					background: var(--cell-select-cursor)
 				#{&}-select
-					background: rgba(32, 144, 255, 0.1)
+					background: var(--cell-select)
 				#{&}-cursor
-					background: rgba(255, 255, 255, 0.1)
+					background: var(--cell-cursor)
 
 		#{&}-cname
 			font-size: var(--dynamic-filer-font-size)
 			text-overflow: ellipsis
 			flex: 1
-			padding-left: 4px
+			margin-left: 4px
 		#{&}-cicon
 			display: inline-block
 			vertical-align: middle
@@ -104,30 +113,30 @@ $scroll_w: 6px
 			font-size: var(--dynamic-filer-font-size)
 		#{&}-clink
 			font-size: var(--dynamic-filer-font-size)
-			margin: 0 4px
+			margin: 0 2px
 		#{&}-ctrgt
 			font-size: var(--dynamic-filer-font-size)
 
 		#{&}-csize
 			font-size: var(--dynamic-filer-font-size)
-			padding-left: 4px
+			margin-left: 6px
 
 		#{&}-cdate
 			font-size: var(--dynamic-filer-font-size)
-			padding-left: 4px
+			margin-left: 6px
 
 		#{&}-ctime
 			font-size: var(--dynamic-filer-font-size)
-			padding-left: 4px
-			padding-right: $scroll_w
+			margin-left: 6px
+			margin-right: var(--scroll-width)
 
 		#{&}-scroll
 			position: absolute
 			top: var(--filer-data-top)
 			right: 0px
-			width: $scroll_w
+			width: var(--scroll-width)
 			height: var(--filer-data-height)
 		#{&}-knob
 			position: absolute
 			width: 100%
-			background: rgba(255, 255, 255, 0.2)
+			background: var(--scroll-knob)
