--- a/src/app/itcss/_1_settings.sass
+++ b/src/app/itcss/_1_settings.sass
@@ -1,16 +1,6 @@
-$black:				#1e2132
-$red:				#e27878
-$green:				#b4be82
-$yellow:			#e2a478
-$blue:				#84a0c6
-$magenta:			#a093c7
-$cyan:				#89b8c2
-$white:				#c6c8d1
-$lightBlack:		#6b7089
-$lightRed:			#e98989
-$lightGreen:		#c0ca8e
-$lightYellow:		#e9b189
-$lightBlue:			#91acd1
-$lightMagenta:		#ada0d3
-$lightCyan:			#95c4ce
-$lightWhite:		#d2d4de
+$red:		rgba(255, 130, 130, 1)
+$green:		rgba(150, 200, 140, 1)
+$yellow:	rgba(245, 175, 130, 1)
+$blue:		rgba(145, 175, 220, 1)
+$magenta:	rgba(175, 165, 220, 1)
+$cyan:		rgba(145, 200, 210, 1)
