--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -8,7 +8,7 @@
 			align-items: center
 			width: 100%
 			height: 100%
-			background: rgba(0, 0, 0, 0.75)
+			background-color: rgba(0, 0, 0, 0.75)
 
 		#{&}-dialog
 			flex: none
@@ -16,7 +16,7 @@
 			padding: 8px
 			width: 600px
 			max-width: calc(100% - 24px)
-			background: rgba(40, 40, 40, 1)
+			background-color: rgba(40, 40, 40, 1)
 			border: solid 1px rgba(40, 40, 40, 1)
 			@at-root
 				#{&}:focus
