リファクタリング

--- a/src/app/itcss/_3_generic.sass
+++ b/src/app/itcss/_3_generic.sass
@@ -1,5 +1,5 @@
 :root
-	--font-family: Consolas, Menlo, Monaco, 'Courier New', monospace
+	--font-family: Consolas, Menlo, Monaco, "Courier New", monospace
 	--color: rgba(255, 255, 255, 1)
 	--background: rgba(30, 30, 30, 1)
 	--focus: rgba(0, 125, 210, 1)
