--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -18,9 +18,8 @@
 			max-width: calc(100% - 24px)
 			background-color: rgba(40, 40, 40, 1)
 			border: solid 1px rgba(40, 40, 40, 1)
-			@at-root
-				#{&}:focus
-					border: solid 1px var(--focus)
+			&:focus
+				border: solid 1px var(--focus)
 
 		#{&}-title
 			margin: 4px
@@ -39,6 +38,5 @@
 
 			padding: 0 4px
 			border: solid 1px rgba(80, 80, 80, 1)
-			@at-root
-				#{&}:focus
-					border: solid 1px var(--focus)
+			&:focus
+				border: solid 1px var(--focus)
