--- a/src/app/index.pug
+++ b/src/app/index.pug
@@ -2,7 +2,9 @@ doctype
 html
 	head
 		meta(charset="utf-8")
-		meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self'; style-src 'self';")
+		meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self';")
 		link(rel="stylesheet", href="style.css")
 		script(src="renderer.js")
+		script(src="vs/loader.js")
+		script(src="vs/editor/editor.main.js")
 	body
