--- a/src/app/itcss/_5_objects.filer.sass
+++ b/src/app/itcss/_5_objects.filer.sass
@@ -56,6 +56,7 @@
 
 		#{&}-info
 			position: absolute
+			overflow: hidden
 			top: 0px
 			width: 100%
 			height: var(--filer-info-height)
@@ -81,6 +82,7 @@
 
 		#{&}-data
 			position: absolute
+			overflow: hidden
 			top: var(--filer-data-top)
 			width: 100%
 			height: var(--filer-data-height)
@@ -103,6 +105,7 @@
 
 		#{&}-cname
 			font-size: var(--dynamic-filer-font-size)
+			overflow: hidden
 			text-overflow: ellipsis
 			flex: 1
 			margin-left: 4px
