--- a/src/app/itcss/_3_generic.sass
+++ b/src/app/itcss/_3_generic.sass
@@ -4,6 +4,9 @@
 	--background: rgba(30, 30, 30, 1)
 	--focus: rgba(0, 125, 210, 1)
 
+	--dynamic-font-size: 14px
+	--dynamic-line-height: 18px
+
 *
 	font-family: var(--font-family)
 	font-size: 14px
