--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -2,12 +2,14 @@
 	@at-root
 		#{&}-fragment
 			position: absolute
+			overflow: hidden
+			width: 100%
+			height: 100%
+
 			display: flex
 			flex-direction: column
 			justify-content: start
 			align-items: center
-			width: 100%
-			height: 100%
 			background-color: rgba(0, 0, 0, 0.75)
 
 		#{&}-dialog
