--- a/src/app/itcss/_5_objects.system.sass
+++ b/src/app/itcss/_5_objects.system.sass
@@ -1,11 +1,7 @@
-.viewer
+.system
 	@at-root
 		#{&}-fragment
 			position: absolute
 			overflow: hidden
-			width: 100%
-			height: 100%
-
-		#{&}-monaco
 			width: 100%
 			height: 100%
