--- a/src/app/style.sass
+++ b/src/app/style.sass
@@ -4,4 +4,5 @@
 @import ./itcss/5_objects.filer.sass
 @import ./itcss/5_objects.modal.sass
 @import ./itcss/5_objects.spinner.sass
+@import ./itcss/5_objects.system.sass
 @import ./itcss/5_objects.viewer.sass
