--- a/src/app/itcss/_3_generic.sass
+++ b/src/app/itcss/_3_generic.sass
@@ -9,7 +9,7 @@
 
 *
 	font-family: var(--font-family)
-	font-size: 14px
+	font-size: var(--dynamic-font-size)
 	box-sizing: border-box
 	margin: 0
 	padding: 0
