--- a/src/app/itcss/_5_objects.modal.sass
+++ b/src/app/itcss/_5_objects.modal.sass
@@ -25,19 +25,20 @@
 
 		#{&}-title
 			margin: 4px
+			overflow: hidden
+			white-space: break-spaces
+			word-break: break-all
 			font-weight: bold
 
 		#{&}-alert
 			margin: 4px
+			overflow: hidden
 			white-space: break-spaces
 			word-break: break-all
 
 		#{&}-prompt
 			margin: 4px
-
-			height: 24px
-			line-height: 24px
-
+			overflow: hidden
 			padding: 0 4px
 			border: solid 1px rgba(80, 80, 80, 1)
 			&:focus
