--- a/src/app/style.sass
+++ b/src/app/style.sass
@@ -1,8 +1,8 @@
-@import ./itcss/1_settings.sass
-@import ./itcss/3_generic.sass
-@import ./itcss/4_base.sass
-@import ./itcss/5_objects.filer.sass
-@import ./itcss/5_objects.modal.sass
-@import ./itcss/5_objects.spinner.sass
-@import ./itcss/5_objects.system.sass
-@import ./itcss/5_objects.viewer.sass
+@use "./itcss/1_settings.sass"        as settings
+@use "./itcss/3_generic.sass"         as generic
+@use "./itcss/4_base.sass"            as base
+@use "./itcss/5_objects.filer.sass"   as objects_filer
+@use "./itcss/5_objects.modal.sass"   as objects_modal
+@use "./itcss/5_objects.spinner.sass" as objects_spinner
+@use "./itcss/5_objects.system.sass"  as objects_system
+@use "./itcss/5_objects.viewer.sass"  as objects_viewer
