--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -5,6 +5,11 @@
 		width: 100%
 		height: 100%
 
+		background-color: var(--background)
+
 	&-monaco
 		width: 100%
 		height: 100%
+
+.editor-banner
+	--vscode-banner-background: var(--background)
