エラー修正

--- a/src/app/itcss/_5_objects.spinner.styl
+++ b/src/app/itcss/_5_objects.spinner.styl
@@ -1,7 +1,7 @@
 .spinner
 	display: inline-block
-	width: calc(var(--dynamic-filer-line-height) - 4px)
-	height: calc(var(--dynamic-filer-line-height) - 4px)
+	width: calc(var(--dynamic-line-height) - 4px)
+	height: calc(var(--dynamic-line-height) - 4px)
 	border-radius: 50%
 	margin: 2px
 	border-top:    2px solid rgba(255, 255, 255, 0.2)
