--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -1,4 +1,9 @@
+@font-face
+	font-family: icon
+	src: url("./vs/base/browser/ui/codicons/codicon/codicon.ttf") format("truetype")
+
 :root
+	--icon: #EEE
 	--file: var(--color)
 	--link: _cyan
 	--directory: _blue
@@ -106,11 +111,12 @@
 		flex: 1
 		margin-left: 4px
 	&-cicon
-		display: inline-block
+		font-family: icon
+		font-size: var(--dynamic-font-size)
 		vertical-align: middle
-		width: var(--dynamic-line-height)
-		height: var(--dynamic-line-height)
 		margin-right: 2px
+		color: var(--icon)
+
 	&-cfile
 		font-size: var(--dynamic-font-size)
 	&-clink
