ファイル監視の表示

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -112,8 +112,8 @@
 		margin-left: 4px
 	&-cicon
 		font-family: icon
-		font-size: var(--dynamic-font-size)
-		vertical-align: middle
+		font-size: calc(var(--dynamic-font-size) + 2px)
+		vertical-align: bottom
 		margin-right: 2px
 		color: var(--icon)
 
