--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -45,6 +45,9 @@
 	color: var(--warn)
 .c-miss
 	color: var(--miss)
+.c-code
+	color: var(--background)
+	background-color: var(--miss)
 
 .filer
 	&-fragment
