--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -2,8 +2,9 @@
 vendors  = official
 
 _red     = rgba(255, 130, 130, 1)
+_orange  = rgba(245, 175, 130, 1)
+_yellow  = rgba(230, 230, 130, 1)
 _green   = rgba(150, 200, 140, 1)
-_yellow  = rgba(245, 175, 130, 1)
+_cyan    = rgba(145, 200, 210, 1)
 _blue    = rgba(145, 175, 220, 1)
 _magenta = rgba(175, 165, 220, 1)
-_cyan    = rgba(145, 200, 210, 1)
