--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -10,7 +10,8 @@
 	--shortcut: _green
 	--bookmark: _green
 	--special: _magenta
-	--warn: _yellow
+	--note: _yellow
+	--warn: _orange
 	--miss: _red
 
 	--stat-none: rgba(255, 255, 255, 0.1)
@@ -46,8 +47,7 @@
 .c-miss
 	color: var(--miss)
 .c-code
-	color: var(--background)
-	background-color: var(--miss)
+	color: var(--note)
 
 .filer
 	&-fragment
