--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -9,5 +9,24 @@
 		width: 100%
 		height: 100%
 
+	&-image
+		width: 100%
+		height: 100%
+
+		display: flex
+		align-items: center
+		justify-content: center
+
+		background-color: var(--background)
+		background-image:
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+		background-position: 0 0, 8px 8px
+		background-size: 16px 16px
+
+	&-img
+		max-width: 100%
+		max-height: 100%
+
 .editor-banner
 	display: none !important
