--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -28,5 +28,10 @@
 		max-width: 100%
 		max-height: 100%
 
+	&-error
+		width: 100%
+		height: 100%
+		background-color: var(--background)
+
 .editor-banner
 	display: none !important
