--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -1,3 +1,13 @@
+@font-face
+	font-family: icon
+	src: url("./vs/base/browser/ui/codicons/codicon/codicon.ttf") format("truetype")
+
+@keyframes rotate
+	0%
+		transform: rotate(0deg)
+	100%
+		transform: rotate(360deg)
+
 :root
 	--font-family: Consolas, Menlo, Monaco, "Courier New", monospace
 	--color: rgba(255, 255, 255, 1)
