--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -1,7 +1,3 @@
-@font-face
-	font-family: icon
-	src: url("./vs/base/browser/ui/codicons/codicon/codicon.ttf") format("truetype")
-
 :root
 	--icon: #EEE
 	--file: var(--color)
@@ -154,3 +150,15 @@
 		position: absolute
 		width: 100%
 		background-color: var(--scroll-knob)
+
+	&-spinner
+		display: inline-block
+		width: calc(var(--dynamic-line-height) - 4px)
+		height: calc(var(--dynamic-line-height) - 4px)
+		border-radius: 50%
+		margin: 2px
+		border-top:    2px solid rgba(255, 255, 255, 0.2)
+		border-right:  2px solid rgba(255, 255, 255, 0.2)
+		border-bottom: 2px solid rgba(255, 255, 255, 0.2)
+		border-left:   2px solid #ffffff
+		animation: rotate 1s infinite linear
