--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -33,5 +33,16 @@
 		height: 100%
 		background-color: var(--background)
 
+	&-spinner
+		display: inline-block
+		width: 100px
+		height: 100px
+		border-radius: 50%
+		border-top:    8px solid rgba(255, 255, 255, 0.2)
+		border-right:  8px solid rgba(255, 255, 255, 0.2)
+		border-bottom: 8px solid rgba(255, 255, 255, 0.2)
+		border-left:   8px solid #ffffff
+		animation: rotate 1s infinite linear
+
 .editor-banner
 	display: none !important
