--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -5,33 +5,22 @@
 		width: 100%
 		height: 100%
 
-	&-monaco
-		width: 100%
-		height: 100%
+		&-flex
+			display: flex
+			flex-direction: column
+			justify-content: center
+			align-items: center
 
-	&-image
-		width: 100%
-		height: 100%
+		&-background
+			background-color: var(--background)
 
-		display: flex
-		align-items: center
-		justify-content: center
-
-		background-color: var(--background)
-		background-image:
-			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
-			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
-		background-position: 0 0, 8px 8px
-		background-size: 16px 16px
-
-	&-img
-		max-width: 100%
-		max-height: 100%
-
-	&-error
-		width: 100%
-		height: 100%
-		background-color: var(--background)
+		&-background-image
+			background-color: var(--background)
+			background-image:
+				linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+				linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+			background-position: 0 0, 8px 8px
+			background-size: 16px 16px
 
 	&-spinner
 		display: inline-block
@@ -43,6 +32,14 @@
 		border-bottom: 8px solid rgba(255, 255, 255, 0.2)
 		border-left:   8px solid #ffffff
 		animation: rotate 1s infinite linear
+
+	&-monaco
+		width: 100%
+		height: 100%
+
+	&-image
+		max-width: 100%
+		max-height: 100%
 
 .editor-banner
 	display: none !important
