--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -5,41 +5,42 @@
 		width: 100%
 		height: 100%
 
-		&-flex
-			display: flex
-			flex-direction: column
-			justify-content: center
-			align-items: center
+	// &-spinner
+	// 	display: inline-block
+	// 	width: 100px
+	// 	height: 100px
+	// 	border-radius: 50%
+	// 	border-top:    8px solid rgba(255, 255, 255, 0.2)
+	// 	border-right:  8px solid rgba(255, 255, 255, 0.2)
+	// 	border-bottom: 8px solid rgba(255, 255, 255, 0.2)
+	// 	border-left:   8px solid #ffffff
+	// 	animation: rotate 1s infinite linear
 
-		&-background
-			background-color: var(--background)
-
-		&-background-image
-			background-color: var(--background)
-			background-image:
-				linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
-				linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
-			background-position: 0 0, 8px 8px
-			background-size: 16px 16px
-
-	&-spinner
-		display: inline-block
-		width: 100px
-		height: 100px
-		border-radius: 50%
-		border-top:    8px solid rgba(255, 255, 255, 0.2)
-		border-right:  8px solid rgba(255, 255, 255, 0.2)
-		border-bottom: 8px solid rgba(255, 255, 255, 0.2)
-		border-left:   8px solid #ffffff
-		animation: rotate 1s infinite linear
-
-	&-monaco
-		width: 100%
-		height: 100%
-
-	&-image
-		max-width: 100%
-		max-height: 100%
+// MonacoComponent
+.viewer-monaco
+	width: 100%
+	height: 100%
 
 .editor-banner
 	display: none !important
+
+// ImageComponent
+.viewer-image
+	width: 100%
+	height: 100%
+
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
+	
+	background-color: var(--background)
+	background-image:
+		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+	background-position: 0 0, 8px 8px
+	background-size: 16px 16px
+
+	&-img
+		max-width: 100%
+		max-height: 100%
