--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -29,17 +29,29 @@
 	width: 100%
 	height: 100%
 
-	display: flex
-	flex-direction: column
-	justify-content: center
-	align-items: center
-	
-	background-color: var(--background)
-	background-image:
-		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
-		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
-	background-position: 0 0, 8px 8px
-	background-size: 16px 16px
+	&-head
+		width: 100%
+		height: var(--dynamic-line-height)
+		line-height: var(--dynamic-line-height)
+
+		background-color: var(--background)
+		margin: 0px 4px
+
+	&-back
+		width: 100%
+		height: calc(100% - var(--dynamic-line-height))
+
+		display: flex
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		
+		background-color: var(--background)
+		background-image:
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+		background-position: 0 0, 8px 8px
+		background-size: 16px 16px
 
 	&-img
 		max-width: 100%
