読み込み中インジケータ

--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -8,6 +8,14 @@
 	100%
 		transform: rotate(360deg)
 
+@keyframes indeterminate
+	0%
+		transform: translateX(0) scaleX(0)
+	40%
+		transform: translateX(0) scaleX(0.4)
+	100%
+		transform: translateX(100%) scaleX(0.5)
+
 :root
 	--font-family: Consolas, Menlo, Monaco, "Courier New", monospace
 	--color: rgba(255, 255, 255, 1)
