--- a/src/app/index.pug
+++ b/src/app/index.pug
@@ -4,7 +4,7 @@ html
 		meta(charset="utf-8")
 		meta(
 			http-equiv="Content-Security-Policy",
-			content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self';"
+			content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self';; media-src 'self';"
 		)
 		link(rel="stylesheet", href="style.css")
 		script(src="renderer.js")
