--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -5,17 +5,6 @@
 		width: 100%
 		height: 100%
 
-	// &-spinner
-	// 	display: inline-block
-	// 	width: 100px
-	// 	height: 100px
-	// 	border-radius: 50%
-	// 	border-top:    8px solid rgba(255, 255, 255, 0.2)
-	// 	border-right:  8px solid rgba(255, 255, 255, 0.2)
-	// 	border-bottom: 8px solid rgba(255, 255, 255, 0.2)
-	// 	border-left:   8px solid #ffffff
-	// 	animation: rotate 1s infinite linear
-
 // MonacoComponent
 .viewer-monaco
 	width: 100%
@@ -56,3 +45,37 @@
 	&-img
 		max-width: 100%
 		max-height: 100%
+
+// VideoComponent
+.viewer-video
+	width: 100%
+	height: 100%
+
+	&-head
+		width: 100%
+		height: var(--dynamic-line-height)
+		line-height: var(--dynamic-line-height)
+
+		background-color: var(--background)
+		margin: 0px 4px
+
+	&-back
+		width: 100%
+		height: calc(100% - var(--dynamic-line-height))
+
+		display: flex
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		
+		background-color: var(--background)
+		background-image:
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+		background-position: 0 0, 8px 8px
+		background-size: 16px 16px
+
+	&-vid
+		max-width: 100%
+		max-height: 100%
+
