ブランチ表示の準備

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -67,11 +67,18 @@
 		height: var(--filer-info-height)
 
 	&-dir,
-	&-cnt
+	&-val
 		height: var(--dynamic-line-height)
 		line-height: var(--dynamic-line-height)
 		font-size: var(--dynamic-font-size)
 		margin: 0px 4px
+
+	&-vicon
+		font-family: icon
+		vertical-align: bottom
+		margin-right: 2px
+	&-vdata
+		margin-right: 12px
 
 	&-stat
 		position: absolute
