ベンダープレフィックス

--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -1,4 +1,4 @@
-// https://github.com/stylus/stylus/blob/dev/docs/keyframes.md
+// https://stylus-lang.com/docs/keyframes.html#expansion
 vendors  = official
 
 _red     = rgba(255, 130, 130, 1)
