--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -1,3 +1,8 @@
+:root
+	--viewer-head-height: var(--dynamic-line-height)
+	--viewer-stat-height: 2px
+	--viewer-main-height: calc(100% - var(--viewer-head-height) - var(--viewer-stat-height))
+
 .viewer
 	&-fragment
 		position: absolute
@@ -5,10 +10,27 @@
 		width: 100%
 		height: 100%
 
-// MonacoComponent
+// MonacoComponent MonacoDiffComponent
 .viewer-monaco
 	width: 100%
 	height: 100%
+
+	&-head
+		width: 100%
+		height: var(--viewer-head-height)
+		line-height: var(--viewer-head-height)
+
+		background-color: var(--background)
+		margin: 0px 4px
+
+	&-stat
+		width: 100%
+		height: var(--viewer-stat-height)
+		background-color: var(--stat-active)
+
+	&-edit
+		width: 100%
+		height: var(--viewer-main-height)
 
 .editor-banner
 	display: none !important
@@ -20,15 +42,20 @@
 
 	&-head
 		width: 100%
-		height: var(--dynamic-line-height)
-		line-height: var(--dynamic-line-height)
+		height: var(--viewer-head-height)
+		line-height: var(--viewer-head-height)
 
 		background-color: var(--background)
 		margin: 0px 4px
 
+	&-stat
+		width: 100%
+		height: var(--viewer-stat-height)
+		background-color: var(--stat-active)
+
 	&-back
 		width: 100%
-		height: calc(100% - var(--dynamic-line-height))
+		height: var(--viewer-main-height)
 
 		display: flex
 		flex-direction: column
@@ -53,15 +80,20 @@
 
 	&-head
 		width: 100%
-		height: var(--dynamic-line-height)
-		line-height: var(--dynamic-line-height)
+		height: var(--viewer-head-height)
+		line-height: var(--viewer-head-height)
 
 		background-color: var(--background)
 		margin: 0px 4px
 
+	&-stat
+		width: 100%
+		height: var(--viewer-stat-height)
+		background-color: var(--stat-active)
+
 	&-back
 		width: 100%
-		height: calc(100% - var(--dynamic-line-height))
+		height: var(--viewer-main-height)
 
 		display: flex
 		flex-direction: column
@@ -86,15 +118,20 @@
 
 	&-head
 		width: 100%
-		height: var(--dynamic-line-height)
-		line-height: var(--dynamic-line-height)
+		height: var(--viewer-head-height)
+		line-height: var(--viewer-head-height)
 
 		background-color: var(--background)
 		margin: 0px 4px
 
+	&-stat
+		width: 100%
+		height: var(--viewer-stat-height)
+		background-color: var(--stat-active)
+
 	&-back
 		width: 100%
-		height: calc(100% - var(--dynamic-line-height))
+		height: var(--viewer-main-height)
 
 		display: flex
 		flex-direction: column
