--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -92,7 +92,7 @@
 		&-target
 			background-color: var(--stat-target)
 
-	&-progress
+	&-prog
 		width: 100%
 		height: 100%
 		background-color: rgba(255, 255, 255, 0.5)
