--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -19,7 +19,6 @@
 		width: 100%
 		height: var(--viewer-head-height)
 		line-height: var(--viewer-head-height)
-
 		background-color: var(--background)
 		margin: 0px 4px
 
@@ -28,9 +27,17 @@
 		height: var(--viewer-stat-height)
 		background-color: var(--stat-active)
 
+	&-prog
+		width: 100%
+		height: 100%
+		background-color: rgba(255, 255, 255, 0.5)
+		animation: indeterminate 1s infinite linear
+		transform-origin: left center
+
 	&-edit
 		width: 100%
 		height: var(--viewer-main-height)
+		background-color: var(--background)
 
 .editor-banner
 	display: none !important
@@ -44,7 +51,6 @@
 		width: 100%
 		height: var(--viewer-head-height)
 		line-height: var(--viewer-head-height)
-
 		background-color: var(--background)
 		margin: 0px 4px
 
@@ -52,6 +58,13 @@
 		width: 100%
 		height: var(--viewer-stat-height)
 		background-color: var(--stat-active)
+
+	&-prog
+		width: 100%
+		height: 100%
+		background-color: rgba(255, 255, 255, 0.5)
+		animation: indeterminate 1s infinite linear
+		transform-origin: left center
 
 	&-back
 		width: 100%
@@ -61,7 +74,7 @@
 		flex-direction: column
 		justify-content: center
 		align-items: center
-		
+
 		background-color: var(--background)
 		background-image:
 			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
@@ -82,7 +95,6 @@
 		width: 100%
 		height: var(--viewer-head-height)
 		line-height: var(--viewer-head-height)
-
 		background-color: var(--background)
 		margin: 0px 4px
 
@@ -90,6 +102,13 @@
 		width: 100%
 		height: var(--viewer-stat-height)
 		background-color: var(--stat-active)
+
+	&-prog
+		width: 100%
+		height: 100%
+		background-color: rgba(255, 255, 255, 0.5)
+		animation: indeterminate 1s infinite linear
+		transform-origin: left center
 
 	&-back
 		width: 100%
@@ -99,7 +118,7 @@
 		flex-direction: column
 		justify-content: center
 		align-items: center
-		
+
 		background-color: var(--background)
 		background-image:
 			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
@@ -129,15 +148,21 @@
 		height: var(--viewer-stat-height)
 		background-color: var(--stat-active)
 
+	&-prog
+		width: 100%
+		height: 100%
+		background-color: rgba(255, 255, 255, 0.5)
+		animation: indeterminate 1s infinite linear
+		transform-origin: left center
+
 	&-back
 		width: 100%
 		height: var(--viewer-main-height)
-
 		display: flex
 		flex-direction: column
 		justify-content: center
 		align-items: center
-		
+
 		background-color: var(--background)
 		background-image:
 			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
