アイコン表示のテスト

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -144,6 +144,10 @@
 		margin-right: 2px
 		color: var(--icon)
 
+		img
+			width: var(--dynamic-line-height)
+			height: var(--dynamic-line-height)
+
 	&-cfile
 		font-size: var(--dynamic-font-size)
 	&-clink
