--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -137,14 +137,11 @@
 		text-overflow: ellipsis
 		flex: 1
 		margin-left: 4px
-	&-cicon
-		font-family: icon
-		font-size: calc(var(--dynamic-font-size) + 2px)
-		vertical-align: bottom
-		margin-right: 2px
-		color: var(--icon)
 
+	&-cicon
+		margin-right: 2px
 		img
+			vertical-align: top
 			width: var(--dynamic-line-height)
 			height: var(--dynamic-line-height)
 
