--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -141,7 +141,8 @@
 	&-cicon
 		margin-right: 2px
 		img
-			vertical-align: top
+			display: inline-block
+			vertical-align: bottom
 			width: var(--dynamic-line-height)
 			height: var(--dynamic-line-height)
 
