色合い調整

--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -1,10 +1,34 @@
 // https://stylus-lang.com/docs/keyframes.html#expansion
-vendors  = official
+vendors = official
 
-_red     = rgba(255, 130, 130, 1)
-_orange  = rgba(245, 175, 130, 1)
-_yellow  = rgba(230, 230, 130, 1)
-_green   = rgba(150, 200, 140, 1)
-_cyan    = rgba(145, 200, 210, 1)
-_blue    = rgba(145, 175, 220, 1)
-_magenta = rgba(175, 165, 220, 1)
+_foreground = #d4d4d4
+_background = #1e1e1e
+_focus      = #007fd4
+_red        = #d16969
+_orange     = #ce9178
+_yellow     = #d7ba7d
+_green      = #4ec9b0
+_cyan       = #9cdcfe
+_blue       = #569cd6
+_magenta    = #c586c0
+
+// https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_vs.json
+// https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_plus.json
+_01 = #d4d4d4 // editor.foreground
+_02 = #1e1e1e // editor.background
+_03 = #000080 // header
+_04 = #6a9955 // comment
+_05 = #569cd6 // constant.language
+_06 = #b5cea8 // constant.numeric
+_07 = #646695 // constant.regexp
+_08 = #d7ba7d // entity.name.tag.css
+_09 = #9cdcfe // entity.other.attribute-name
+_10 = #f44747 // invalid
+_11 = #ce9178 // string
+_12 = #6796e6 // punctuation.definition.list.begin.markdown
+_13 = #808080 // punctuation.definition.tag
+_14 = #d16969 // string.regexp
+_15 = #dcdcaa // Function declarations
+_16 = #4ec9b0 // Types declaration and references
+_17 = #c586c0 // Control flow / Special keywords
+_18 = #4fc1ff // Constants and enums
