--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -1,6 +1,5 @@
 :root
-	--icon: #EEE
-	--file: var(--color)
+	--file: _foreground
 	--link: _cyan
 	--directory: _blue
 	--shortcut: _green
@@ -10,12 +9,12 @@
 	--warn: _orange
 	--miss: _red
 
+	--stat-active: rgba(0, 127, 212, 1)
+	--stat-target: rgba(0, 127, 212, 0.5)
 	--stat-none: rgba(255, 255, 255, 0.1)
-	--stat-active: rgba(30, 145, 255, 1)
-	--stat-target: rgba(30, 145, 255, 0.5)
 
-	--cell-select-cursor: rgba(30, 145, 255, 0.4)
-	--cell-select: rgba(30, 145, 255, 0.2)
+	--cell-select-cursor: rgba(0, 127, 212, 0.3)
+	--cell-select: rgba(0, 127, 212, 0.2)
 	--cell-cursor: rgba(255, 255, 255, 0.1)
 
 	--scroll-width: 6px
