--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -18,9 +18,9 @@
 
 :root
 	--font-family: Consolas, Menlo, Monaco, "Courier New", monospace
-	--color: rgba(255, 255, 255, 1)
-	--background: rgba(30, 30, 30, 1)
-	--focus: rgba(0, 125, 210, 1)
+	--foreground: _foreground
+	--background: _background
+	--focus: _focus
 
 	// set js
 	--dynamic-font-size: initial
