--- a/src/app/itcss/_4_base.styl
+++ b/src/app/itcss/_4_base.styl
@@ -6,5 +6,5 @@ root
 	position: absolute
 	width: 100%
 	height: 100%
-	color: var(--color)
+	color: var(--foreground)
 	background-color: var(--background)
