リンクをフォントアイコンに変更

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -138,18 +138,18 @@
 		margin-left: 4px
 
 	&-cicon
+		font-family: icon
+		vertical-align: bottom
 		margin-right: 2px
-		img
-			display: inline-block
-			vertical-align: bottom
-			width: var(--dynamic-line-height)
-			height: var(--dynamic-line-height)
+
+	&-cimg
+		display: inline-block
+		vertical-align: bottom
+		width: var(--dynamic-line-height)
+		height: var(--dynamic-line-height)
 
 	&-cfile
 		font-size: var(--dynamic-font-size)
-	&-clink
-		font-size: var(--dynamic-font-size)
-		margin: 0 2px
 	&-ctrgt
 		font-size: var(--dynamic-font-size)
 
