レイアウト微調整

--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -7,10 +7,14 @@ vendors = official
 _foreground = #d4d4d4
 _background = #1e1e1e
 _focus      = #007fd4
+
 _red        = #d16969
 _orange     = #ce9178
-_yellow     = #d7ba7d
-_green      = #4ec9b0
-_cyan       = #9cdcfe
+_amber      = #d7ba7d
+_yellow     = #dcdcaa
+_green      = #b5cea8
+_teal       = #4ec9b0
+_sky        = #9cdcfe
+_cyan       = #4fc1ff
 _blue       = #569cd6
 _magenta    = #c586c0
