--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -8,6 +8,7 @@ _foreground = #d4d4d4
 _background = #1e1e1e
 _focus      = #007fd4
 
+_gray       = #808080
 _red        = #d16969
 _orange     = #ce9178
 _amber      = #d7ba7d
