--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -1,4 +1,5 @@
 :root
+	--ellipsis: _gray
 	--operator: _blue
 	--file: _foreground
 	--link: _sky
@@ -28,6 +29,10 @@
 
 .c-operator
 	color: var(--operator)
+.c-drive
+	color: var(--file)
+.c-homeuser
+	color: var(--file)
 .c-file
 	color: var(--file)
 .c-link
@@ -136,6 +141,7 @@
 	&-cname
 		font-size: var(--dynamic-font-size)
 		overflow: hidden
+		color: var(--ellipsis)
 		text-overflow: ellipsis
 		flex: 1
 		margin-left: 4px
