ハイライト表示更新

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -7,7 +7,6 @@
 	--shortcut: _teal
 	--bookmark: _teal
 	--special: _magenta
-	--note: _amber
 	--warn: _orange
 	--miss: _red
 
@@ -49,8 +48,15 @@
 	color: var(--warn)
 .c-miss
 	color: var(--miss)
-.c-code
-	color: var(--note)
+
+.c-trv
+	color: _blue
+.c-dsc
+	color: _blue
+.c-lro
+	color: _amber
+.c-rlo
+	color: _amber
 
 .filer
 	&-fragment
