フレームレスウィンドウ

--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -23,6 +23,7 @@
 	--focus: _focus
 
 	// set js
+	--dynamic-navbar-height: initial
 	--dynamic-font-size: initial
 	--dynamic-line-height: initial
 
