--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -53,6 +53,7 @@
 	color: _blue
 .c-dsc
 	color: _blue
+	margin: 0 1px
 .c-lro
 	color: _amber
 .c-rlo
@@ -62,8 +63,9 @@
 	&-fragment
 		position: absolute
 		overflow: hidden
+		top: var(--dynamic-navbar-height)
 		width: 100%
-		height: 100%
+		height: calc(100% - var(--dynamic-navbar-height))
 
 		display: flex
 		flex-direction: row
