--- a/src/app/itcss/_5_objects.modal.styl
+++ b/src/app/itcss/_5_objects.modal.styl
@@ -2,8 +2,9 @@
 	&-fragment
 		position: absolute
 		overflow: hidden
+		top: var(--dynamic-navbar-height)
 		width: 100%
-		height: 100%
+		height: calc(100% - var(--dynamic-navbar-height))
 
 		display: flex
 		flex-direction: column
