--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -146,32 +146,29 @@
 		height: var(--dynamic-line-height)
 		line-height: var(--dynamic-line-height)
 
+	&-cicon
+		position: relative
+		width: var(--dynamic-line-height)
+		height: var(--dynamic-line-height)
+		margin-left: 4px
+	&-cimg
+		position: absolute
+		width: var(--dynamic-line-height)
+		height: var(--dynamic-line-height)
+
 	&-cname
 		font-size: var(--dynamic-font-size)
 		overflow: hidden
 		color: var(--ellipsis)
 		text-overflow: ellipsis
 		flex: 1
-		margin-left: 4px
-
-	&-cicon
-		font-family: icon
-		vertical-align: bottom
-	&-cimg
-		display: inline-block
-		vertical-align: bottom
-		width: var(--dynamic-line-height)
-		height: var(--dynamic-line-height)
-
 	&-cfile
 		font-size: var(--dynamic-font-size)
 		margin-left: 2px
-
 	&-clink
 		font-family: icon
 		vertical-align: bottom
 		margin-left: 2px
-
 	&-ctrgt
 		font-size: var(--dynamic-font-size)
 		margin-left: 2px
