--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -128,8 +128,8 @@
 		background-size: 16px 16px
 
 	&-aud
-		max-width: 100%
-		max-height: 100%
+		width: 50%
+		min-width: 400px
 
 // VideoComponent
 .viewer-video
