表示幅調整

--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -128,8 +128,8 @@
 		background-size: 16px 16px
 
 	&-aud
-		width: 50%
-		min-width: 400px
+		width: 600px
+		max-width: calc(100% - 24px)
 
 // VideoComponent
 .viewer-video
