--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -61,6 +61,7 @@
 .c-rlo
 	color: _amber
 
+// FilerFragment
 .filer
 	&-fragment
 		position: absolute
@@ -72,6 +73,7 @@
 		display: flex
 		flex-direction: row
 
+	// ListComponent
 	&-list
 		position: relative
 		flex: 1
@@ -89,13 +91,12 @@
 		line-height: var(--dynamic-line-height)
 		font-size: var(--dynamic-font-size)
 		margin: 0px 4px
-
-	&-vicon
-		font-family: icon
-		vertical-align: bottom
-	&-vdata
-		margin-left: 2px
-		margin-right: 12px
+		&-icon
+			font-family: icon
+			vertical-align: bottom
+		&-text
+			margin-left: 2px
+			margin-right: 12px
 
 	&-stat
 		position: absolute
@@ -123,69 +124,6 @@
 		width: 100%
 		height: var(--filer-data-height)
 
-	&-cell
-		position: absolute
-		width: 100%
-		min-width: 300px
-		height: var(--dynamic-line-height)
-
-	&-cback
-		position: absolute
-		width: 100%
-		height: var(--dynamic-line-height)
-		&-cursor
-			border: 1px solid var(--cell-cursor)
-		&-select
-			background-color: var(--cell-select)
-
-	&-cflex
-		position: absolute
-		display: flex
-		flex-direction: row
-		width: 100%
-		height: var(--dynamic-line-height)
-		line-height: var(--dynamic-line-height)
-
-	&-cicon
-		position: relative
-		width: var(--dynamic-line-height)
-		height: var(--dynamic-line-height)
-		margin-left: 4px
-	&-cimg
-		position: absolute
-		width: var(--dynamic-line-height)
-		height: var(--dynamic-line-height)
-
-	&-cname
-		font-size: var(--dynamic-font-size)
-		overflow: hidden
-		color: var(--ellipsis)
-		text-overflow: ellipsis
-		flex: 1
-	&-cfile
-		font-size: var(--dynamic-font-size)
-		margin-left: 2px
-	&-clink
-		font-family: icon
-		vertical-align: bottom
-		margin-left: 2px
-	&-ctrgt
-		font-size: var(--dynamic-font-size)
-		margin-left: 2px
-
-	&-csize
-		font-size: var(--dynamic-font-size)
-		margin-left: 6px
-
-	&-cdate
-		font-size: var(--dynamic-font-size)
-		margin-left: 6px
-
-	&-ctime
-		font-size: var(--dynamic-font-size)
-		margin-left: 6px
-		margin-right: var(--scroll-width)
-
 	&-scroll
 		position: absolute
 		top: var(--filer-data-top)
@@ -194,17 +132,91 @@
 		height: var(--filer-data-height)
 	&-knob
 		position: absolute
+		// top: _reactive
 		width: 100%
+		// height: _reactive
 		background-color: var(--scroll-knob)
+	
+	// CellComponent
+	&-cell
+		position: absolute
+		// top: _reactive
+		width: 100%
+		min-width: 300px
+		height: var(--dynamic-line-height)
 
-	&-spinner
-		display: inline-block
-		width: calc(var(--dynamic-line-height) - 4px)
-		height: calc(var(--dynamic-line-height) - 4px)
-		border-radius: 50%
-		margin: 2px
-		border-top:    2px solid rgba(255, 255, 255, 0.2)
-		border-right:  2px solid rgba(255, 255, 255, 0.2)
-		border-bottom: 2px solid rgba(255, 255, 255, 0.2)
-		border-left:   2px solid #ffffff
-		animation: rotate 1s infinite linear
+		// back component
+		&-back
+			position: absolute
+			width: 100%
+			height: var(--dynamic-line-height)
+			&-cursor
+				border: 1px solid var(--cell-cursor)
+			&-select
+				background-color: var(--cell-select)
+
+		// spinner component
+		&-spinner
+			display: inline-block
+			width: calc(var(--dynamic-line-height) - 4px)
+			height: calc(var(--dynamic-line-height) - 4px)
+			border-radius: 50%
+			margin: 2px
+			border-top:    2px solid rgba(255, 255, 255, 0.2)
+			border-right:  2px solid rgba(255, 255, 255, 0.2)
+			border-bottom: 2px solid rgba(255, 255, 255, 0.2)
+			border-left:   2px solid #ffffff
+			animation: rotate 1s infinite linear
+
+		// attr component
+		&-attr
+			position: absolute
+			display: flex
+			flex-direction: row
+			width: 100%
+			height: var(--dynamic-line-height)
+			line-height: var(--dynamic-line-height)
+
+			&-icon
+				position: relative
+				width: var(--dynamic-line-height)
+				height: var(--dynamic-line-height)
+				margin-left: 4px
+
+			&-img
+				position: absolute
+				width: var(--dynamic-line-height)
+				height: var(--dynamic-line-height)
+
+			&-name
+				font-size: var(--dynamic-font-size)
+				overflow: hidden
+				color: var(--ellipsis)
+				text-overflow: ellipsis
+				flex: 1
+
+			&-file
+				font-size: var(--dynamic-font-size)
+				margin-left: 2px
+
+			&-link
+				font-family: icon
+				vertical-align: bottom
+				margin-left: 2px
+
+			&-trgt
+				font-size: var(--dynamic-font-size)
+				margin-left: 2px
+
+			&-size
+				font-size: var(--dynamic-font-size)
+				margin-left: 6px
+
+			&-date
+				font-size: var(--dynamic-font-size)
+				margin-left: 6px
+
+			&-time
+				font-size: var(--dynamic-font-size)
+				margin-left: 6px
+				margin-right: var(--scroll-width)
