--- a/src/app/itcss/_4_base.styl
+++ b/src/app/itcss/_4_base.styl
@@ -8,3 +8,6 @@ root
 	height: 100%
 	color: var(--foreground)
 	background-color: var(--background)
+
+dialog::backdrop
+	background-color: transparent
