--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -4,3 +4,18 @@
 		overflow: hidden
 		width: 100%
 		height: 100%
+
+	&-dialog
+		position: fixed
+		top: auto
+		bottom: 0px
+		padding: 8px
+
+		border-width: 0
+		width: 100%
+		min-width: initial
+		max-width: initial
+
+		color: white
+		background-color: rgba(0, 0, 0, 0.8)
+
