--- a/src/app/itcss/_5_objects.navbar.styl
+++ b/src/app/itcss/_5_objects.navbar.styl
@@ -5,14 +5,14 @@
 		position: absolute
 		overflow: hidden
 		width: 100%
-		height: var(--dynamic-navbar-height)
+		height: _navbar_height
 
 	&-title
 		position: absolute
 		overflow: hidden
 		padding 0 140px
 		width: 100%
-		height: var(--dynamic-navbar-height)
-		line-height: var(--dynamic-navbar-height)
+		height: _navbar_height
+		line-height: _navbar_height
 		text-align: center
 		text-overflow: ellipsis
