バージョンとメトリクス表示

--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -9,13 +9,23 @@
 		position: fixed
 		top: auto
 		bottom: 0px
-		padding: 8px
 
 		border-width: 0
 		width: 100%
 		min-width: initial
 		max-width: initial
 
-		color: white
-		background-color: rgba(0, 0, 0, 0.8)
+		background-color: transparent
 
+	&-version
+		display: flex
+		flex-direction: row
+
+		&-item
+			padding: 4px
+			margin-right: 2px
+			display: flex
+			flex-direction: column
+
+			color: white
+			background-color: rgba(0, 0, 0, 0.8)
