--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -5,19 +5,10 @@
 		width: 100%
 		height: 100%
 
-	&-dialog
-		position: fixed
-		top: auto
-		bottom: 0px
-
-		border-width: 0
-		width: 100%
-		min-width: initial
-		max-width: initial
-
-		background-color: transparent
-
-	&-version
+	&-overlay
+		z-index: calc(infinity)
+		position: absolute
+		bottom: 0
 		display: flex
 		flex-direction: row
 
@@ -28,4 +19,4 @@
 			flex-direction: column
 
 			color: white
-			background-color: rgba(0, 0, 0, 0.8)
+			background-color: hsla(0, 0%, 20%, 0.8)
