--- a/src/app/index.pug
+++ b/src/app/index.pug
@@ -15,7 +15,7 @@ html
 			content=_default + _script + _style + _img + _font + _connect + _media
 		)
 		link(rel="stylesheet", href="style.css")
-		script(type="module", src="renderer.js")
+		script(type="module", src="renderer.mjs")
 		script(src="vs/loader.js")
 		script(src="vs/editor/editor.main.js")
 	body
