--- a/src/app/style.styl
+++ b/src/app/style.styl
@@ -1,1 +1,9 @@
-@require "itcss/*"
+// @require "itcss/*"
+@require "itcss/_1_settings"
+@require "itcss/_3_generic"
+@require "itcss/_4_base"
+@require "itcss/_5_objects.filer"
+@require "itcss/_5_objects.modal"
+@require "itcss/_5_objects.navbar"
+@require "itcss/_5_objects.system"
+@require "itcss/_5_objects.viewer"
