--- a/src/app/itcss/_5_objects.modal.styl
+++ b/src/app/itcss/_5_objects.modal.styl
@@ -16,8 +16,7 @@
 		flex: none
 		margin-top: 24px
 		padding: 8px
-		width: 600px
-		max-width: calc(100% - 24px)
+		_width(600px, 24px)
 		background-color: rgba(40, 40, 40, 1)
 		border: solid 1px rgba(40, 40, 40, 1)
 		&:focus
