--- a/src/app/style.styl
+++ b/src/app/style.styl
@@ -1,5 +1,6 @@
 // @require "itcss/*"
 @require "itcss/_1_settings"
+@require "itcss/_2_tools"
 @require "itcss/_3_generic"
 @require "itcss/_4_base"
 @require "itcss/_5_objects.filer"
