ファイル分割

--- a/src/app/style.styl
+++ b/src/app/style.styl
@@ -8,3 +8,7 @@
 @require "itcss/_5_objects.navbar"
 @require "itcss/_5_objects.system"
 @require "itcss/_5_objects.viewer"
+@require "itcss/_5_objects.viewer-audio"
+@require "itcss/_5_objects.viewer-image"
+@require "itcss/_5_objects.viewer-monaco"
+@require "itcss/_5_objects.viewer-video"
