拡張子の表示

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -209,10 +209,8 @@
 				font-size: var(--dynamic-font-size)
 				margin-left: 2px
 
-			&-size
-				font-size: var(--dynamic-font-size)
-				margin-left: 6px
-
+			&-exte,
+			&-size,
 			&-date
 				font-size: var(--dynamic-font-size)
 				margin-left: 6px
