--- a/src/app/style.styl
+++ b/src/app/style.styl
@@ -2,7 +2,7 @@
 @require "itcss/_1_settings"
 @require "itcss/_2_tools"
 @require "itcss/_3_generic"
-@require "itcss/_4_base"
+@require "itcss/_4_elements"
 @require "itcss/_5_objects.filer"
 @require "itcss/_5_objects.modal"
 @require "itcss/_5_objects.navbar"
