--- a/src/app/itcss/_5_objects.navbar.styl
+++ b/src/app/itcss/_5_objects.navbar.styl
@@ -13,6 +13,10 @@
 		padding 0 140px
 		width: 100%
 		height: _navbar_height
-		line-height: _navbar_height
-		text-align: center
-		text-overflow: ellipsis
+
+		display: flex
+		flex-direction: row
+		flex-wrap: wrap
+		justify-content: center
+		align-items: center
+
