フォント調整

--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -17,7 +17,7 @@
 		transform: translateX(100%) scaleX(0.5)
 
 :root
-	--font-family: Consolas, Menlo, Monaco, "Courier New", monospace
+	--font-family: Consolas, Menlo, monospace
 	--foreground: _foreground
 	--background: _background
 	--focus: _focus
