--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -62,11 +62,8 @@
 // FilerFragment
 .filer
 	&-fragment
-		position: absolute
+		grid-area: client
 		overflow: hidden
-		top: _navbar_height
-		width: 100%
-		height: s("calc(100% - %s)", _navbar_height)
 
 		display: grid
 		// grid-template: _reactive
