--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -1,9 +1,7 @@
 .system
 	&-fragment
-		position: absolute
+		grid-area: navbar / navbar / client / client
 		overflow: hidden
-		width: 100%
-		height: 100%
 
 	&-overlay
 		z-index: calc(infinity)
