--- a/src/app/itcss/_5_objects.modal.styl
+++ b/src/app/itcss/_5_objects.modal.styl
@@ -1,10 +1,7 @@
 .modal
 	&-fragment
-		position: absolute
+		grid-area: client
 		overflow: hidden
-		top: _navbar_height
-		width: 100%
-		height: s("calc(100% - %s)", _navbar_height)
 
 		display: flex
 		flex-direction: column
