--- a/src/app/itcss/_5_objects.navbar.styl
+++ b/src/app/itcss/_5_objects.navbar.styl
@@ -2,17 +2,13 @@
 	&-fragment
 		-webkit-user-select: none
 		-webkit-app-region: drag
-		position: absolute
+		grid-area: navbar
 		overflow: hidden
-		width: 100%
-		height: _navbar_height
 
 	&-title
-		position: absolute
-		overflow: hidden
 		padding 0 140px
 		width: 100%
-		height: _navbar_height
+		height: 100%
 
 		display: flex
 		flex-direction: row
