--- a/src/app/itcss/_5_objects.viewer.styl
+++ b/src/app/itcss/_5_objects.viewer.styl
@@ -5,8 +5,5 @@
 
 .viewer
 	&-fragment
-		position: absolute
+		grid-area: client
 		overflow: hidden
-		top: _navbar_height
-		width: 100%
-		height: s("calc(100% - %s)", _navbar_height)
