grid-areaの全体指定

--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -1,6 +1,6 @@
 .system
 	&-fragment
-		grid-area: navbar / navbar / client / client
+		grid-area: 1 / 1 / -1 / -1
 		overflow: hidden
 
 	&-overlay
