スタイル調整

--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -22,9 +22,9 @@
 	--background: _background
 	--focus: _focus
 
-	// set js
-	--dynamic-font-size: initial
-	--dynamic-line-height: initial
+	--static-navbar-height: _set_script
+	--dynamic-font-size: _set_script
+	--dynamic-line-height: _set_script
 
 *
 	font-family: var(--font-family)
