--- a/src/app/itcss/_4_elements.styl
+++ b/src/app/itcss/_4_elements.styl
@@ -10,6 +10,6 @@ root
 
 	display: grid
 	grid-template: \
-		"navbar" _navbar_height \
-		"client" 1fr            \
+		"navbar" var(--static-navbar-height) \
+		"client" 1fr                         \
 		/ 1fr
