--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -1,6 +1,9 @@
 // https://stylus-lang.com/docs/keyframes.html#expansion
 vendors = official
 
+_set_script = initial
+_vue_reactive = initial
+
 // https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_vs.json
 // https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_plus.json
 
@@ -19,5 +22,3 @@ _sky        = #9cdcfe
 _cyan       = #4fc1ff
 _blue       = #569cd6
 _magenta    = #c586c0
-
-_navbar_height = 32px
