--- a/src/app/itcss/_5_objects.viewer-audio.styl
+++ b/src/app/itcss/_5_objects.viewer-audio.styl
@@ -2,16 +2,29 @@
 	width: 100%
 	height: 100%
 
+	display: grid
+	grid-template: \
+		"audio-head" var(--dynamic-line-height) \
+		"audio-stat" 2px                        \
+		"audio-main" 1fr                        \
+		/ 1fr
+
 	&-head
-		width: 100%
-		height: var(--viewer-head-height)
-		line-height: var(--viewer-head-height)
-		background-color: var(--background)
+		grid-area: audio-head
+		overflow: hidden
+
+		display: flex
+		flex-direction: row
+		flex-wrap: nowrap
+		align-items: center
 		margin: 0px 4px
 
+		background-color: var(--background)
+
 	&-stat
-		width: 100%
-		height: var(--viewer-stat-height)
+		grid-area: audio-stat
+		overflow: hidden
+
 		background-color: var(--stat-active)
 
 	&-prog
@@ -22,13 +35,12 @@
 		transform-origin: left center
 
 	&-back
-		width: 100%
-		height: var(--viewer-main-height)
+		grid-area: audio-main
+		overflow: hidden
 
-		display: flex
-		flex-direction: column
-		justify-content: center
-		align-items: center
+		display: grid
+		grid-template-rows: minmax(8px, 1fr) auto minmax(8px, 1fr)
+		grid-template-columns: minmax(8px, 1fr) auto minmax(8px, 1fr)
 
 		background-color: var(--background)
 		background-image:
@@ -38,5 +50,7 @@
 		background-size: 16px 16px
 
 	&-aud
+		grid-area: 2 / 2
+		overflow hidden
 		width: 600px
-		max-width: calc(100% - 24px)
+		max-width: 100%
