--- a/src/app/itcss/_5_objects.viewer-embed.styl
+++ b/src/app/itcss/_5_objects.viewer-embed.styl
@@ -2,16 +2,29 @@
 	width: 100%
 	height: 100%
 
+	display: grid
+	grid-template: \
+		"embed-head" var(--dynamic-line-height) \
+		"embed-stat" 2px                        \
+		"embed-main" 1fr                        \
+		/ 1fr
+
 	&-head
-		width: 100%
-		height: var(--viewer-head-height)
-		line-height: var(--viewer-head-height)
-		background-color: var(--background)
+		grid-area: embed-head
+		overflow: hidden
+
+		display: flex
+		flex-direction: row
+		flex-wrap: nowrap
+		align-items: center
 		margin: 0px 4px
 
+		background-color: var(--background)
+
 	&-stat
-		width: 100%
-		height: var(--viewer-stat-height)
+		grid-area: embed-stat
+		overflow: hidden
+
 		background-color: var(--stat-active)
 
 	&-prog
@@ -22,6 +35,8 @@
 		transform-origin: left center
 
 	&-embed
+		grid-area: embed-main
+		overflow: hidden
 		width: 100%
-		height: var(--viewer-main-height)
+		height: 100%
 		background-color: var(--background)
