表示順スタイル調整

--- a/src/app/itcss/_5_objects.navbar.styl
+++ b/src/app/itcss/_5_objects.navbar.styl
@@ -1,7 +1,7 @@
 .navbar
 	&-fragment
-		-webkit-user-select: none
-		-webkit-app-region: drag
+		electron-titlebar()
+		no-stacking-context()
 		grid-area: navbar
 		overflow: hidden
 
