--- a/src/app/itcss/_5_objects.system.styl
+++ b/src/app/itcss/_5_objects.system.styl
@@ -8,14 +8,12 @@
 		z-index: calc(infinity)
 		position: absolute
 		bottom: 0
-		display: flex
-		flex-direction: row
+
+		display: grid
+		grid-template-columns: auto auto
+		column-gap: 2px
 
 		&-item
 			padding: 4px
-			margin-right: 2px
-			display: flex
-			flex-direction: column
-
 			color: white
 			background-color: hsla(0, 0%, 20%, 0.8)
