--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -9,6 +9,7 @@ _vue_reactive = initial
 
 _foreground = #d4d4d4
 _background = #1e1e1e
+_border     = #505050
 _focus      = #007fd4
 
 _gray       = #808080
