--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -20,6 +20,7 @@
 	--font-family: Consolas, Menlo, monospace
 	--foreground: _foreground
 	--background: _background
+	--border: _border
 	--focus: _focus
 
 	--static-navbar-height: _set_script
