レイアウト調整

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -48,13 +48,10 @@ _scroll_width = 6px
 	color: _blue
 .c-dsc
 	color: _blue
-	margin: 0 1px
 .c-err
 	color: _red
-	margin: 0 1px
-.c-unicode
+.c-bidi
 	color: _amber
-
 .c-cloud
 	color: _gray
 
